# Bandaid

./: README.md
piperoni-identity-service-main/: .dockerignore  .gitignore  Dockerfile  README.md  database.py  db_config.py  docker-compose.yml  exception.py  main.py  models.py  preflight.py  pyproject.toml  requirements.txt  schemas.py
piperoni-identity-service-main/.github/workflows/: deploy.yml
piperoni-identity-service-main/auth/: auth_password.py  auth_token.py
piperoni-identity-service-main/handlers/: db_handler.py  handlers.py
piperoni-identity-service-main/nginx/: nginx.conf
piperoni-identity-service-main/routers/: authentication.py  files.py  genre.py  instrument.py  personal_chat.py  users.py
piperoni-identity-service-main/services/: current_user_service.py
piperoni-identity-service-main/sockets/: client.py  server.py
piperoni-identity-service-main/utils/: email_verification.py
