[tool.poetry]
name = "piperoni-identity-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
annotated-types = "0.6.0"
anyio = "3.7.1"
click = "8.1.7"
exceptiongroup = "1.1.3"
fastapi = "0.103.2"
greenlet = "3.0.0"
h11 = "0.14.0"
httptools = "0.6.0"
idna = "3.4"
install = "1.3.5"
psycopg = "3.1.12"
pydantic = "2.4.2"
pydantic-core = "2.10.1"
python-dotenv = "1.0.0"
python-multipart = "0.0.6"
pyyaml = "6.0.1"
sniffio = "1.3.0"
sqlalchemy = "2.0.21"
starlette = "0.27.0"
typing-extensions = "4.8.0"
uvicorn = "0.23.2"
uvloop = "0.17.0"
watchfiles = "0.20.0"
websockets = "11.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
